# fight_to_death

./: pyproject.toml  settings.toml
fight_to_death/: game.py  main.py  settings.py
