[project]
name = "fight-to-death"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Alexey Karnachev", email = "alekseykarnachev@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "moderngl>=5.12.0",
    "pydantic-settings>=2.7.1",
    "pygame>=2.6.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
